# zero_copy_serde

./: Cargo.toml  profile.json
src/: dma_buf.rs  main.rs  storage.rs  stream.rs
